# hephaes-core

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
backend/: README.md
backend/app/: main.py
backend/app/db/: models.py  session.py
backend/data/: app.db
backend/tests/: conftest.py  test_api_assets.py
demo/: core_demo.ipynb
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: main.tsx  styles.css
frontend/src/app/: AppShell.tsx  routes.tsx
frontend/src/components/: AssetStatusBadge.tsx  ConnectionStatus.tsx  FeedbackViewport.tsx
frontend/src/lib/: config.ts  format.ts
frontend/src/lib/api/: assets.ts  client.ts  health.ts  index.ts  types.ts
frontend/src/pages/: AssetDetailPage.tsx  InventoryPage.tsx  NotFoundPage.tsx
frontend/src/state/: feedback.tsx  inventory.tsx
scripts/: clean_build_artifacts.py
src/hephaes/: __init__.py  _converter_helpers.py  _tfrecord_crc.py  _utils.py  converter.py  mappers.py  models.py  parquet.py  profiler.py  reader.py  tfrecord.py
src/hephaes/outputs/: __init__.py  base.py  parquet.py  registry.py  tfrecord.py  tfrecord_writer.py
src/hephaes_core/: parquet.py
tests/: test_converter.py  test_mapper.py  test_models.py  test_package_init.py  test_parquet.py  test_profiler.py  test_reader.py  test_tfrecord.py  test_utils.py
